--- a/umbrello/codegenerators/Makefile.am
+++ b/umbrello/codegenerators/Makefile.am
@@ -1,28 +1,10 @@
-####### kdevelop will overwrite this part!!! (begin)##########
-lib_LTLIBRARIES = libcodegenerator.la
-
+umbrello_DIR = $(kde_datadir)/umbrello/codegenerators
+umbrello_LTLIBRARIES = libcodegenerator.la
 
 INCLUDES = $(all_includes)
+#LDFLAGS =                     -Iuml/classparser -Iuml/dialogs -Iuml/clipboard
 
-
-LDFLAGS =                     -Iuml/classparser -Iuml/dialogs -Iuml/clipboard
-
-
-libcodegenerator_la_LDFLAGS = -module
-
+libcodegenerator_la_LDFLAGS = $(KDE_PLUGIN)
 libcodegenerator_la_METASOURCES = AUTO
-
-libcodegenerator_la_SOURCES = phpwriter.cpp javawriter.cpp factory.cpp cppwriter.cpp 
-
-
-EXTRA_DIST = cppwriter.cpp cppwriter.h factory.cpp javawriter.cpp javawriter.h phpwriter.cpp phpwriter.h 
-
-####### kdevelop will overwrite this part!!! (end)############
-
-install-data-local:
-	$(mkinstalldirs) $(kde_datadir)/umbrello/codegenerators/
-	$(INSTALL_DATA) $(srcdir)/libcodegenerator.la $(kde_datadir)/umbrello/codegenerators/libcodegenerator.la
-
-uninstall-local:
-	-rm -f $(kde_datadir)/umbrello/codegenerators/libcodegenerator.la
-
+libcodegenerator_la_SOURCES = phpwriter.cpp javawriter.cpp factory.cpp \
+                              cppwriter.cpp 
