ah, I remember, there was something weird about it
svn path=/trunk/kdesdk/umbrello/; revision=202374

--- a/umbrello/headings/Makefile.am
+++ b/umbrello/headings/Makefile.am
@@ -1,2 +1,2 @@
-my_DIR = $(kde_datadir)/umbrello/headings
+mydir = $(kde_datadir)/umbrello/headings
 my_DATA = heading.java heading.h heading.php heading.cpp 
