next try at makefile cleanups..
svn path=/trunk/kdesdk/umbrello/; revision=202479

--- a/umbrello/dialogs/Makefile.am
+++ b/umbrello/dialogs/Makefile.am
@@ -1,13 +1,7 @@
-####### kdevelop will overwrite this part!!! (begin)##########
-noinst_LIBRARIES = libdialogs.a
+noinst_LTLIBRARIES = libdialogs.la
 
 INCLUDES = $(all_includes) -I$(top_srcdir)
 
-libdialogs_a_METASOURCES = AUTO
+libdialogs_la_METASOURCES = AUTO
 
-libdialogs_a_SOURCES = overwritedialogue.cpp codegenerationwizard.cpp codegenerationoptionspage.cpp codegenerationwizardbase.ui codegenerationoptionsbase.ui selectlanguagesdlg.cpp sellanguagesbase.ui classwizard.cpp configgeneratorsbase.ui configcodegenerators.cpp notedialog.cpp activitydialog.cpp activitypage.cpp umlwidgetcolorpage.cpp umlviewdialog.cpp umloperationdialog.cpp umlattributedialog.cpp statedialog.cpp settingsdlg.cpp selectopdlg.cpp parmpropdlg.cpp diagramprintpage.cpp classpropdlg.cpp classoptionspage.cpp classopspage.cpp classgenpage.cpp classattpage.cpp assocpropdlg.cpp assocpage.cpp 
-
-
-EXTRA_DIST = assocpage.cpp assocpage.h assocpropdlg.cpp assocpropdlg.h classattpage.cpp classattpage.h classgenpage.cpp classgenpage.h classopspage.cpp classopspage.h classoptionspage.cpp classoptionspage.h classpropdlg.cpp classpropdlg.h diagramprintpage.cpp diagramprintpage.h parmpropdlg.cpp parmpropdlg.h selectopdlg.cpp selectopdlg.h settingsdlg.cpp settingsdlg.h statedialog.cpp statedialog.h umlattributedialog.h umloperationdialog.h umlviewdialog.h umlwidgetcolorpage.h umlattributedialog.cpp umloperationdialog.cpp umlviewdialog.cpp umlwidgetcolorpage.cpp activitypage.cpp activitypage.h activitydialog.cpp activitydialog.h notedialog.cpp notedialog.h configcodegenerators.cpp configcodegenerators.h configgeneratorsbase.ui classwizard.cpp classwizard.h sellanguagesbase.ui selectlanguagesdlg.cpp selectlanguagesdlg.h codegenerationoptionsbase.ui codegenerationwizardbase.ui codegenerationoptionspage.cpp codegenerationoptionspage.h codegenerationwizard.cpp codegenerationwizard.h overwritedialogue.cpp overwritedialogue.h 
-
-####### kdevelop will overwrite this part!!! (end)############
+libdialogs_la_SOURCES = overwritedialogue.cpp codegenerationwizard.cpp codegenerationoptionspage.cpp codegenerationwizardbase.ui codegenerationoptionsbase.ui selectlanguagesdlg.cpp sellanguagesbase.ui classwizard.cpp configgeneratorsbase.ui configcodegenerators.cpp notedialog.cpp activitydialog.cpp activitypage.cpp umlwidgetcolorpage.cpp umlviewdialog.cpp umloperationdialog.cpp umlattributedialog.cpp statedialog.cpp settingsdlg.cpp selectopdlg.cpp parmpropdlg.cpp diagramprintpage.cpp classpropdlg.cpp classoptionspage.cpp classopspage.cpp classgenpage.cpp classattpage.cpp assocpropdlg.cpp assocpage.cpp 
