--- a/umbrello/codegenerators/Makefile.am
+++ b/umbrello/codegenerators/Makefile.am
@@ -1,10 +1,8 @@
-umbrellodir = $(kde_datadir)/umbrello/codegenerators
-umbrello_LTLIBRARIES = libcodegenerator.la
+noinst_LTLIBRARIES = libcodegenerator.la
 
 INCLUDES = $(all_includes)
-#LDFLAGS =                     -Iuml/classparser -Iuml/dialogs -Iuml/clipboard
 
-libcodegenerator_la_LDFLAGS = $(KDE_PLUGIN) $(all_libraries) 
+libcodegenerator_la_LDFLAGS = $(all_libraries) 
 libcodegenerator_la_METASOURCES = AUTO
 libcodegenerator_la_SOURCES = phpwriter.cpp javawriter.cpp factory.cpp \
                               cppwriter.cpp 
