--- a/umbrello/codegenerators/Makefile.am
+++ b/umbrello/codegenerators/Makefile.am
@@ -5,4 +5,4 @@ INCLUDES = $(all_includes)
 libcodegenerator_la_LDFLAGS = $(all_libraries) 
 libcodegenerator_la_METASOURCES = AUTO
 libcodegenerator_la_SOURCES = phpwriter.cpp javawriter.cpp factory.cpp \
-                              cppwriter.cpp 
+                              cppwriter.cpp adawriter.cpp
