Added perl and python code generators. Made it compile the library
svn path=/trunk/kdesdk/umbrello/; revision=203456

--- a/umbrello/codegenerators/Makefile.am
+++ b/umbrello/codegenerators/Makefile.am
@@ -1,8 +1,9 @@
-noinst_LTLIBRARIES = libcodegenerator.la
+lib_LTLIBRARIES = libcodegenerator.la
 
 INCLUDES = $(all_includes)
 
 libcodegenerator_la_LDFLAGS = $(all_libraries) 
 libcodegenerator_la_METASOURCES = AUTO
 libcodegenerator_la_SOURCES = phpwriter.cpp javawriter.cpp factory.cpp \
-                              cppwriter.cpp adawriter.cpp
+                              cppwriter.cpp adawriter.cpp perlwriter.cpp \
+                              pythonwriter.cpp
