Added zoom buttons to toolbar
svn path=/trunk/kdesdk/umbrello/; revision=204033

--- a/umbrello/umbrelloui.rc
+++ b/umbrello/umbrelloui.rc
@@ -38,4 +38,8 @@
     <Action name="class_wizard"/>
   </Menu>
 </MenuBar>
+<ToolBar name="mainToolBar">
+  <Action name="umbrello_zoom_in"/>
+  <Action name="umbrello_zoom_out"/>
+</ToolBar>
 </kpartgui>
