--- a/umbrello/Makefile.am
+++ b/umbrello/Makefile.am
@@ -26,6 +26,7 @@ umbrello_LDFLAGS = $(all_libraries) $(KDE_RPATH)
 
 messages: rc.cpp
 	$(PREPARETIPS) > tips.cpp
+	$(EXTRACTRC) *.rc dialogs/*.ui > ./rc.cpp
 	LIST=`find . -name \*.h -o -name \*.hh -o -name \*.H -o -name \*.hxx -o -name \*.hpp -o -name \*.cpp -o -name \*.cc -o -name \*.cxx -o -name \*.ecpp -o -name \*.C`; \
 	if test -n "$$LIST"; then \
 	 $(XGETTEXT) $$LIST -o $(podir)/umbrello.pot; \
