--- a/umbrello/umbrelloui.rc
+++ b/umbrello/umbrelloui.rc
@@ -13,7 +13,7 @@
       <Action name="new_state_diagram"/>
       <Action name="new_activity_diagram"/>
     </Menu>
-    <Menu name="show_view"><text>Sh&ow</text>
+    <Menu name="show_view"><text>Sh&amp;ow</text>
       <ActionList name="view_list">
       </ActionList>
     </Menu>
