squash beastie 53354 version not recognised also changed version from 1.1.1 to 1.2-alpha
svn path=/trunk/kdesdk/umbrello/; revision=206871

--- a/umbrello/Makefile.am
+++ b/umbrello/Makefile.am
@@ -32,3 +32,12 @@ messages: rc.cpp
 	 $(XGETTEXT) $$LIST -o $(podir)/umbrello.pot; \
 	fi
 	rm -f tips.cpp
+
+version.h: $(top_srcdir)/umbrello/VERSION
+	printf "#undef VERSION\n#define VERSION \"`cat $(top_srcdir)/umbrello/VERSION`\"\n" > version.h
+
+noinst_HEADERS = version.h
+
+main.o: version.h
+
+
