Added packages to class diagrams Another must have feature from UML Modeller
svn path=/trunk/kdesdk/umbrello/; revision=209222

--- a/umbrello/pics/Makefile.am
+++ b/umbrello/pics/Makefile.am
@@ -1,7 +1,7 @@
 ####### kdevelop will overwrite this part!!! (begin)##########
 
 
-EXTRA_DIST = actor.xpm aggregation.xpm anchor.xpm arrow.xpm association.xpm broom.xpm case.xpm classicon.xpm component.xpm composition.xpm constraint.xpm CVglobal_meth.png CVglobal_var.png CVnamespace.png CVprivate_meth.png CVprivate_signal.png CVprivate_slot.png CVprivate_var.png CVprotected_meth.png CVprotected_signal.png CVprotected_slot.png CVprotected_var.png CVpublic_meth.png CVpublic_signal.png CVpublic_slot.png CVpublic_var.png CVstruct.png dependency.xpm end_state.xpm folder_green_open.png folder_green.png folder_grey_open.png folder_grey.png folder_home.png generalization.xpm hline.xpm implements.xpm initial_state.xpm interface.xpm largepackage.xpm lifeline.xpm line.xpm message.xpm note.xpm object.xpm output_win.xpm realizes.xpm rectangle.xpm smallpackage.xpm snapshot.xpm startlogo.png text.xpm umlclass_template.xpm umlclass.xpm uniassoc.xpm usecaserelation.xpm vline.xpm branch.xpm fork.xpm 
+EXTRA_DIST = actor.xpm aggregation.xpm anchor.xpm arrow.xpm association.xpm broom.xpm case.xpm classicon.xpm component.xpm composition.xpm constraint.xpm CVglobal_meth.png CVglobal_var.png CVnamespace.png CVprivate_meth.png CVprivate_signal.png CVprivate_slot.png CVprivate_var.png CVprotected_meth.png CVprotected_signal.png CVprotected_slot.png CVprotected_var.png CVpublic_meth.png CVpublic_signal.png CVpublic_slot.png CVpublic_var.png CVstruct.png dependency.xpm end_state.xpm folder_green_open.png folder_green.png folder_grey_open.png folder_grey.png folder_home.png generalization.xpm hline.xpm implements.xpm initial_state.xpm interface.xpm largepackage.xpm lifeline.xpm line.xpm message.xpm note.xpm object.xpm output_win.xpm realizes.xpm rectangle.xpm smallpackage.xpm snapshot.xpm startlogo.png text.xpm umlclass_template.xpm umlclass.xpm uniassoc.xpm usecaserelation.xpm vline.xpm branch.xpm fork.xpm package.xpm
 
 install-data-local:
 	$(mkinstalldirs) $(kde_datadir)/umbrello/pics/
@@ -122,6 +122,8 @@ install-data-local:
 	$(INSTALL_DATA) $(srcdir)/branch.xpm $(kde_datadir)/umbrello/pics/branch.xpm
 	$(mkinstalldirs) $(kde_datadir)/umbrello/pics/
 	$(INSTALL_DATA) $(srcdir)/fork.xpm $(kde_datadir)/umbrello/pics/fork.xpm
+	$(mkinstalldirs) $(kde_datadir)/umbrello/pics/
+	$(INSTALL_DATA) $(srcdir)/package.xpm $(kde_datadir)/umbrello/pics/package.xpm
 
 uninstall-local:
 	-rm -f $(kde_datadir)/umbrello/pics/actor.xpm
@@ -183,5 +185,6 @@ uninstall-local:
 	-rm -f $(kde_datadir)/umbrello/pics/vline.xpm
 	-rm -f $(kde_datadir)/umbrello/pics/branch.xpm
 	-rm -f $(kde_datadir)/umbrello/pics/fork.xpm
+	-rm -f $(kde_datadir)/umbrello/pics/package.xpm
 
 ####### kdevelop will overwrite this part!!! (end)############
