Added IDL code generator from Oliver Kellogg
svn path=/trunk/kdesdk/umbrello/; revision=210042

--- a/umbrello/headings/Makefile.am
+++ b/umbrello/headings/Makefile.am
@@ -1,2 +1,2 @@
 mydir = $(kde_datadir)/umbrello/headings
-my_DATA = heading.java heading.h heading.php heading.cpp heading.pm heading.py
+my_DATA = heading.java heading.h heading.php heading.cpp heading.pm heading.py heading.idl
