--- a/umbrello/codegenerators/Makefile.am
+++ b/umbrello/codegenerators/Makefile.am
@@ -6,7 +6,8 @@ libcodegenerator_la_LDFLAGS = $(all_libraries)
 libcodegenerator_la_METASOURCES = AUTO
 libcodegenerator_la_SOURCES = phpwriter.cpp javawriter.cpp factory.cpp \
                               cppwriter.cpp adawriter.cpp perlwriter.cpp \
-                              pythonwriter.cpp idlwriter.cpp sqlwriter.cpp
+                              pythonwriter.cpp idlwriter.cpp sqlwriter.cpp \
+                              aswriter.cpp jswriter.cpp
 
 install-data-local:
 	$(mkinstalldirs) $(kde_datadir)/umbrello/codegenerators/
