--- a/umbrello/umbrelloui.rc
+++ b/umbrello/umbrelloui.rc
@@ -12,6 +12,7 @@
       <Action name="new_use_case_diagram"/>
       <Action name="new_state_diagram"/>
       <Action name="new_activity_diagram"/>
+      <Action name="new_component_diagram"/>
     </Menu>
     <Menu name="show_view"><text>Sh&amp;ow</text>
       <ActionList name="view_list">
