VFolder kmenu support
svn path=/trunk/kdesdk/umbrello/; revision=211094

--- a/umbrello/Makefile.am
+++ b/umbrello/Makefile.am
@@ -12,8 +12,7 @@ KDE_ICON=AUTO
 appdir=$(kde_datadir)/umbrello
 app_DATA = tips umbrelloui.rc
 
-appsdir = $(kde_appsdir)/Development
-apps_DATA = umbrello.desktop
+xdg_apps_DATA = umbrello.desktop
 
 mimedir = $(kde_mimedir)/application
 mime_DATA = x-umbrello.desktop
