--- a/umbrello/headings/Makefile.am
+++ b/umbrello/headings/Makefile.am
@@ -1,2 +1,2 @@
 mydir = $(kde_datadir)/umbrello/headings
-my_DATA = heading.java heading.h heading.php heading.cpp heading.pm heading.py heading.idl heading.sql heading.js heading.as
+my_DATA = heading.java heading.h heading.php heading.cpp heading.pm heading.py heading.idl heading.sql heading.js heading.as heading.xsd
