--- a/umbrello/diagram/Makefile.am
+++ b/umbrello/diagram/Makefile.am
@@ -4,5 +4,5 @@ INCLUDES = -I$(top_srcdir) $(all_includes)
 
 libdiagram_la_METASOURCES = AUTO
 
-libdiagram_la_SOURCES = diagram.cpp diagramview.cpp diagramelement.cpp umlwidget.cpp classwidget.cpp actorwidget.cpp widgetfactory.cpp
+libdiagram_la_SOURCES = diagram.cpp diagramview.cpp diagramelement.cpp umlwidget.cpp classwidget.cpp actorwidget.cpp widgetfactory.cpp associationwidget.cpp
 
