--- a/umbrello/codegenerators/Makefile.am
+++ b/umbrello/codegenerators/Makefile.am
@@ -4,7 +4,7 @@ INCLUDES = $(all_includes)
 
 libcodegenerator_la_LDFLAGS = $(all_libraries)
 libcodegenerator_la_METASOURCES = AUTO
-libcodegenerator_la_SOURCES = phpwriter.cpp javawriter.cpp factory.cpp \
+libcodegenerator_la_SOURCES = phpwriter.cpp javawriter.cpp factory.cpp classifierinfo.cpp \
                               cppwriter.cpp adawriter.cpp perlwriter.cpp \
                               pythonwriter.cpp idlwriter.cpp sqlwriter.cpp \
                               aswriter.cpp jswriter.cpp xmlschemawriter.cpp
