Make it compile with srcdir!=builddir and some other thingies
svn path=/trunk/kdesdk/umbrello/; revision=217897

--- a/umbrello/refactoring/Makefile.am
+++ b/umbrello/refactoring/Makefile.am
@@ -1,6 +1,6 @@
 noinst_LTLIBRARIES = librefactoring.la
 
-INCLUDES = -I$(top_srcdir) $(all_includes)
+INCLUDES = -I$(top_srcdir) -I$(top_builddir)/umbrello/umbrello/dialogs $(all_includes)
 
 librefactoring_la_METASOURCES = AUTO
 
