Load and query widgetset plugins to see if they want to handle a widget-creation request before using the default (built-in) widgets
svn path=/trunk/kdesdk/umbrello/; revision=219174

--- a/umbrello/diagram/Makefile.am
+++ b/umbrello/diagram/Makefile.am
@@ -4,5 +4,8 @@ INCLUDES = -I$(top_srcdir) -I$(top_builddir)/umbrello/umbrello/dialogs $(all_inc
 
 libdiagram_la_METASOURCES = AUTO
 
-libdiagram_la_SOURCES = diagram.cpp diagramview.cpp diagramelement.cpp umlwidget.cpp classwidget.cpp actorwidget.cpp widgetfactory.cpp associationwidget.cpp
+libdiagram_la_SOURCES = diagram.cpp diagramview.cpp diagramelement.cpp umlwidget.cpp \
+                        classwidget.cpp actorwidget.cpp associationwidget.cpp \
+                        widgetfactory.cpp widgetset.cpp 
+libdiagram_la_LDFLAGS = $(all_libraries) $(KDE_RPATH) -export-dynamic
 
