here is the bogus stuff CCMAIL: klas.kalass@gmx.de
svn path=/trunk/kdesdk/umbrello/; revision=220251

--- a/umbrello/diagram/Makefile.am
+++ b/umbrello/diagram/Makefile.am
@@ -1,6 +1,6 @@
 noinst_LTLIBRARIES = libdiagram.la
 
-INCLUDES = -I$(top_srcdir) -I$(top_builddir)/umbrello/umbrello/dialogs $(all_includes)
+INCLUDES = -I../dialogs -I$(srcdir)/dialogs $(all_includes)
 
 libdiagram_la_METASOURCES = AUTO
 
