New class familiy "Umbrello::Tool" - responsible for creating uml::elements and the corresponding widgets / shapes on the diagrams. DiagramElement - base class for all DiagramElements ( really? ) DiagramWidget - a DiagramElement that can have associations attached to it Path - a Path (multiple segments) on a diagram. it is not attached to any widget and knows nothing about uml objects.. just a multi-line Association - A Path that attaces itself to two DiagramWidgets. knows nothing about UML-associations. this is only a Diagram Association between two widgets
All uml-specific stuff is now in a separate plugin.
UnknownUMLWidget - if a diagram accepts a drop of a UML::Element and there is not plug in that can handle the request for creating an appropiate shape, a "generic" shape is shown - only for case of load-errors or while the uml-plugin is not complete

svn path=/trunk/kdesdk/umbrello/; revision=223636

--- a/umbrello/diagram/Makefile.am
+++ b/umbrello/diagram/Makefile.am
@@ -4,8 +4,10 @@ INCLUDES = -I../dialogs -I$(srcdir)/dialogs $(all_includes)
 
 libdiagram_la_METASOURCES = AUTO
 
-libdiagram_la_SOURCES = diagram.cpp diagramview.cpp diagramelement.cpp umlwidget.cpp \
-                        classwidget.cpp actorwidget.cpp associationwidget.cpp \
-                        widgetfactory.cpp widgetset.cpp 
+libdiagram_la_SOURCES = diagram.cpp diagramview.cpp tool.cpp toolbar.cpp \
+                        diagramelement.cpp diagramwidget.cpp path.cpp pathsegment.cpp \
+                        widgetset.cpp defaultwidgetset.cpp unknownumlwidget.cpp selecttool.cpp pathtool.cpp \
+                        associationtool.cpp associationwidget.cpp toolfactory.cpp widgetfactory.cpp
+
 libdiagram_la_LDFLAGS = $(all_libraries) $(KDE_RPATH) -export-dynamic
 
