--- a/umbrello/dialogs/Makefile.am
+++ b/umbrello/dialogs/Makefile.am
@@ -4,5 +4,15 @@ INCLUDES = -I$(top_srcdir) $(all_includes)
 
 libdialogs_la_METASOURCES = AUTO
 
-libdialogs_la_SOURCES = overwritedialogue.cpp codegenerationwizard.cpp codegenerationoptionspage.cpp codegenerationwizardbase.ui codegenerationoptionsbase.ui selectlanguagesdlg.cpp sellanguagesbase.ui classwizard.cpp configgeneratorsbase.ui configcodegenerators.cpp notedialog.cpp activitydialog.cpp activitypage.cpp umlwidgetcolorpage.cpp umlviewdialog.cpp umloperationdialog.cpp umlattributedialog.cpp statedialog.cpp settingsdlg.cpp selectopdlg.cpp parmpropdlg.cpp diagramprintpage.cpp classpropdlg.cpp classoptionspage.cpp classopspage.cpp classgenpage.cpp classattpage.cpp assocpropdlg.cpp assocpage.cpp diagrampropertiespage.ui assocrolepage.cpp assocgenpage.cpp umltemplatedialog.cpp classtemplatepage.cpp umbrellodialog.cpp classpropertiespage.cpp classpropertiesbase.ui classattributespage.cpp classattributesbase.ui classoperationspage.cpp classoperationsbase.ui operationpropertiesbase.ui operationpropertiespage.cpp classdisplayoptionsbase.ui widgetcolorsbase.ui widgetcolorspage.cpp classdisplayoptionsbase.ui classdisplayoptionspage.cpp
+libdialogs_la_SOURCES = overwritedialogue.cpp codegenerationwizard.cpp codegenerationoptionspage.cpp codegenerationwizardbase.ui \
+                        codegenerationoptionsbase.ui selectlanguagesdlg.cpp sellanguagesbase.ui classwizard.cpp \
+                        configgeneratorsbase.ui configcodegenerators.cpp notedialog.cpp activitydialog.cpp activitypage.cpp \
+                        umlwidgetcolorpage.cpp umlviewdialog.cpp umloperationdialog.cpp umlattributedialog.cpp \
+                        statedialog.cpp settingsdlg.cpp selectopdlg.cpp parmpropdlg.cpp diagramprintpage.cpp \
+                        classpropdlg.cpp classoptionspage.cpp classopspage.cpp classgenpage.cpp classattpage.cpp \
+                        assocpropdlg.cpp assocpage.cpp diagrampropertiespage.ui assocrolepage.cpp assocgenpage.cpp \
+                        umltemplatedialog.cpp classtemplatepage.cpp umbrellodialog.cpp classpropertiespage.cpp \
+                        classpropertiesbase.ui classattributespage.cpp classattributesbase.ui classoperationspage.cpp \
+                        classoperationsbase.ui operationpropertiesbase.ui operationpropertiespage.cpp \
+                        widgetcolorsbase.ui widgetcolorspage.cpp
 
