--- a/umbrello/codegenerators/Makefile.am
+++ b/umbrello/codegenerators/Makefile.am
@@ -7,7 +7,8 @@ libcodegenerator_la_METASOURCES = AUTO
 libcodegenerator_la_SOURCES = phpwriter.cpp javawriter.cpp factory.cpp classifierinfo.cpp \
                               cppwriter.cpp adawriter.cpp perlwriter.cpp \
                               pythonwriter.cpp idlwriter.cpp sqlwriter.cpp \
-                              aswriter.cpp jswriter.cpp xmlschemawriter.cpp
+                              aswriter.cpp jswriter.cpp xmlschemawriter.cpp \
+										cswriter.cpp
 
 install-data-local:
 	$(mkinstalldirs) $(DESTDIR)$(kde_datadir)/umbrello/codegenerators/
