I really don't have enough time at the moment to finish the work on the C# code generator. So I remove the unfinished code.
svn path=/trunk/kdesdk/umbrello/; revision=232284

--- a/umbrello/codegenerators/Makefile.am
+++ b/umbrello/codegenerators/Makefile.am
@@ -7,8 +7,7 @@ libcodegenerator_la_METASOURCES = AUTO
 libcodegenerator_la_SOURCES = phpwriter.cpp javawriter.cpp factory.cpp classifierinfo.cpp \
                               cppwriter.cpp adawriter.cpp perlwriter.cpp \
                               pythonwriter.cpp idlwriter.cpp sqlwriter.cpp \
-                              aswriter.cpp jswriter.cpp xmlschemawriter.cpp \
-										cswriter.cpp
+                              aswriter.cpp jswriter.cpp xmlschemawriter.cpp
 
 install-data-local:
 	$(mkinstalldirs) $(DESTDIR)$(kde_datadir)/umbrello/codegenerators/
