--- a/umbrello/plugins/umlwidgets/Makefile.am
+++ b/umbrello/plugins/umlwidgets/Makefile.am
@@ -2,13 +2,11 @@
 SUBDIRS = dialogs
 
 INCLUDES = -I../../dialogs -Idialogs $(all_includes)
-LDFLAGS = $(all_libraries)
-LDADD = $(LIB_KDECORE)
 
 kde_module_LTLIBRARIES = libumlwidgets.la
 libumlwidgets_la_SOURCES = umlwidgetset.cpp umlwidget.cpp classwidget.cpp classtool.cpp \
                            interfacewidget.cpp interfacetool.cpp packagewidget.cpp packagetool.cpp \
                            umlassociationwidget.cpp umlassociationtool.cpp
 libumlwidgets_la_METASOURCES = AUTO
-libumlwidgets_la_LIBADD = ./dialogs/libdialogs.la $(LIB_KDEUI) $(LIB_QT)
-libumlwidgets_la_LDFLAGS = -module
+libumlwidgets_la_LIBADD = ./dialogs/libdialogs.la $(LIB_KDEUI)
+libumlwidgets_la_LDFLAGS = -module -avoid-version $(KDE_RPATH) $(all_libraries)
