--- a/Makefile.am
+++ b/Makefile.am
@@ -2,7 +2,7 @@
 
 SUBDIRS = umbrello
 
-EXTRA_DIST = uml.kdevprj VERSION
+EXTRA_DIST = uml.kdevprj VERSION INSTALL ChangeLog TODO AUTHORS uml.lsm README COPYING
 
 ####### kdevelop will overwrite this part!!! (end)############
 # not a GNU package. You can remove this line, if 
