--- a/umbrello/clipboard/Makefile.am
+++ b/umbrello/clipboard/Makefile.am
@@ -1,5 +1,5 @@
 INCLUDES = $(all_includes)
 
 noinst_LTLIBRARIES = libclipboard.la
-libclipboard_la_METASOURCES = AUTO
+libclipboard_la_METASOURCES = umldrag.moc idchangelog.moc
 libclipboard_la_SOURCES = umldrag.cpp umlclipboard.cpp idchangelog.cpp 
