--- a/umbrello/x-umbrello.desktop
+++ b/umbrello/x-umbrello.desktop
@@ -1,8 +1,15 @@
 [Desktop Entry]
 Type=MimeType
 MimeType=application/x-uml
-Icon=umbrello
+Icon=umbrellofile
 DefaultApp=umbrello
 Patterns=*.xmi;*.XMI;
 Comment=Umbrello UML Modeller file
-Comment[sv]=UML-fil
+Comment[ca]=Modelador de fitxers UML Umbrello
+Comment[cy]=Ffeil Modelydd UML Umbrello
+Comment[da]=Umbrello UML Modeller fil
+Comment[hu]=Umbrello UML fájl
+Comment[pt_BR]=Arquivo de Modelador UML Umbrello
+Comment[ru]=Файл моделера UML Umbrello
+Comment[sv]=Umbrello UML-modelleringsfil
+Comment[xx]=xxUmbrello UML Modeller filexx
