modified so that can build the java,cpp and xmlschema codegenerators
svn path=/trunk/kdesdk/umbrello/; revision=247347

--- a/umbrello/codegenerators/Makefile.am
+++ b/umbrello/codegenerators/Makefile.am
@@ -4,10 +4,18 @@ INCLUDES = $(all_includes)
 
 libcodegenerator_la_LDFLAGS = $(all_libraries)
 libcodegenerator_la_METASOURCES = AUTO
-libcodegenerator_la_SOURCES = phpwriter.cpp javawriter.cpp factory.cpp classifierinfo.cpp \
-                              cppwriter.cpp adawriter.cpp perlwriter.cpp \
-                              pythonwriter.cpp idlwriter.cpp sqlwriter.cpp \
-                              aswriter.cpp jswriter.cpp xmlschemawriter.cpp
+libcodegenerator_la_SOURCES = codegenfactory.cpp classifierinfo.cpp \
+				javacodegenerationformbase.ui \
+				javacodegenerator.cpp javaantcodedocument.cpp javacodeclassfield.cpp \
+				javaclassifiercodedocument.cpp javacodecomment.cpp javacodedocumentation.cpp \
+				javacodegenerationpolicy.cpp \
+				javacodeoperation.cpp javasetaccessormethod.cpp javagetaccessormethod.cpp \
+				javaclassdeclarationblock.cpp javacodeclassfielddeclarationblock.cpp \
+				javalistaccessormethod.cpp javaremoveaccessormethod.cpp javaaddaccessormethod.cpp \
+				javacodegenerationpolicypage.cpp \
+				cppcodegenerator.cpp cppclassifiercodedocument.cpp \
+				xmlschemacodegenerator.cpp xmlschemaclassifiercodedocument.cpp \
+				xmlschemacodeclassfield.cpp
 
 install-data-local:
 	$(mkinstalldirs) $(DESTDIR)$(kde_datadir)/umbrello/codegenerators/
