changes made fo rnew code generation scheme
svn path=/trunk/kdesdk/umbrello/; revision=247364

--- a/umbrello/dialogs/Makefile.am
+++ b/umbrello/dialogs/Makefile.am
@@ -4,9 +4,12 @@ INCLUDES = -I$(top_srcdir) $(all_includes)
 
 libdialogs_la_METASOURCES = AUTO
 
-libdialogs_la_SOURCES = overwritedialogue.cpp codegenerationwizard.cpp codegenerationoptionspage.cpp codegenerationwizardbase.ui \
-                        codegenerationoptionsbase.ui selectlanguagesdlg.cpp sellanguagesbase.ui classwizard.cpp \
-                        configgeneratorsbase.ui configcodegenerators.cpp notedialog.cpp activitydialog.cpp activitypage.cpp \
+libdialogs_la_SOURCES = overwritedialogue.cpp codegenerationwizard.cpp codegenerationoptionspage.cpp \
+			codegenerationwizardbase.ui umlrolepropertiesbase.ui \
+                        codegenerationoptionsbase.ui codegenerationpolicypage.cpp \
+			codegenerationpolicybase.ui codeviewerdialogbase.ui codevieweroptionsbase.ui\
+			selectlanguagesdlg.cpp sellanguagesbase.ui classwizard.cpp defaultcodegenpolicypage.cpp codeviewerdialog.cpp \
+                        configgeneratorsbase.ui configcodegenerators.cpp codeeditor.cpp notedialog.cpp activitydialog.cpp activitypage.cpp \
                         umlwidgetcolorpage.cpp umlviewdialog.cpp umloperationdialog.cpp umlattributedialog.cpp \
                         statedialog.cpp settingsdlg.cpp selectopdlg.cpp parmpropdlg.cpp diagramprintpage.cpp \
                         classpropdlg.cpp classoptionspage.cpp classgenpage.cpp \
@@ -18,9 +21,9 @@ libdialogs_la_SOURCES = overwritedialogue.cpp codegenerationwizard.cpp codegener
                         operationpropertiesbase.ui operationpropertiespage.cpp attributepropertiesbase.ui attributepropertiespage.cpp \
                         parameterpropertiesbase.ui parameterpropertiespage.cpp \
                         classtemplatesbase.ui classtemplatespage.cpp templatepropertiesbase.ui templatepropertiespage.cpp \
-                        umlobjectassociationsbase.ui umlobjectassociationspage.cpp \
-                        widgetcolorsbase.ui widgetcolorspage.cpp \
-			classifierlistpage.cpp
+                        umlobjectassociationsbase.ui umlobjectassociationspage.cpp umlroledialog.cpp umlroleproperties.cpp \
+                        widgetcolorsbase.ui widgetcolorspage.cpp codeoperationdialog.cpp codevieweroptionspage.cpp \
+			codeoperationdialogbase.cpp
 
 libdialogs_la_LDFLAGS = $(all_libraries) $(KDE_RPATH) -export-dynamic
 
