classifierlistpage entry re-inserted (was dropped when codegen dialogs were merged in )
svn path=/trunk/kdesdk/umbrello/; revision=247444

--- a/umbrello/dialogs/Makefile.am
+++ b/umbrello/dialogs/Makefile.am
@@ -19,7 +19,7 @@ libdialogs_la_SOURCES = overwritedialogue.cpp codegenerationwizard.cpp codegener
                         packagepropertiesbase.ui packagepropertiespage.cpp \
                         classattributesbase.ui classattributespage.cpp classifieroperationsbase.ui classifieroperationspage.cpp \
                         operationpropertiesbase.ui operationpropertiespage.cpp attributepropertiesbase.ui attributepropertiespage.cpp \
-                        parameterpropertiesbase.ui parameterpropertiespage.cpp \
+                        parameterpropertiesbase.ui parameterpropertiespage.cpp classifierlistpage.cpp\
                         classtemplatesbase.ui classtemplatespage.cpp templatepropertiesbase.ui templatepropertiespage.cpp \
                         umlobjectassociationsbase.ui umlobjectassociationspage.cpp umlroledialog.cpp umlroleproperties.cpp \
                         widgetcolorsbase.ui widgetcolorspage.cpp codevieweroptionspage.cpp
