This patch will fix up the CPP code generation to a better state. No..   it doesnt have the full functionality yet, but an analysis of the needs   for this generator showed some holes in the code generation interface, so   besides adding the needed classes for both 'header' and 'source' code   documents it also changes the interface of the codegenerators to NOT   have code document object constructors like "newCodeAccessorMethod". These   are now properly only in the appropriate code documents (both class CodeDocument   and class ClassifierCodeDocument).
svn path=/trunk/kdesdk/umbrello/; revision=247935

--- a/umbrello/codegenerators/Makefile.am
+++ b/umbrello/codegenerators/Makefile.am
@@ -13,7 +13,14 @@ libcodegenerator_la_SOURCES = codegenfactory.cpp classifierinfo.cpp \
 				javaclassdeclarationblock.cpp javacodeclassfielddeclarationblock.cpp \
 				javalistaccessormethod.cpp javaremoveaccessormethod.cpp javaaddaccessormethod.cpp \
 				javacodegenerationpolicypage.cpp \
-				cppcodegenerator.cpp cppclassifiercodedocument.cpp \
+				cppcodegenerator.cpp cppcodedocumentation.cpp cppcodeclassfield.cpp \
+				cppcodecomment.cpp cppmakecodedocument.cpp \
+				cppsourcecodedocument.cpp cppsourceclassdeclarationblock.cpp\
+				cppsourcecodeoperation.cpp cppsourcecodeaccessormethod.cpp \
+				cppsourcecodeclassfielddeclarationblock.cpp \
+				cppheadercodedocument.cpp cppheaderclassdeclarationblock.cpp \
+				cppheadercodeoperation.cpp cppheadercodeaccessormethod.cpp \
+				cppheadercodeclassfielddeclarationblock.cpp \
 				xmlschemacodegenerator.cpp xmlschemaclassifiercodedocument.cpp \
 				xmlschemacodeclassfield.cpp
 
