Added wrapper class to allow use of older code generator writers. As a test, the Perl generator was easily converted. I'll further update the lib with the others in a later update
svn path=/trunk/kdesdk/umbrello/; revision=248188

--- a/umbrello/codegenerators/Makefile.am
+++ b/umbrello/codegenerators/Makefile.am
@@ -5,14 +5,13 @@ INCLUDES = $(all_includes)
 libcodegenerator_la_LDFLAGS = $(all_libraries)
 libcodegenerator_la_METASOURCES = AUTO
 libcodegenerator_la_SOURCES = codegenfactory.cpp classifierinfo.cpp \
-				javacodegenerationformbase.ui \
 				javacodegenerator.cpp javaantcodedocument.cpp javacodeclassfield.cpp \
 				javaclassifiercodedocument.cpp javacodecomment.cpp javacodedocumentation.cpp \
-				javacodegenerationpolicy.cpp \
 				javacodeoperation.cpp javasetaccessormethod.cpp javagetaccessormethod.cpp \
 				javaclassdeclarationblock.cpp javacodeclassfielddeclarationblock.cpp \
 				javalistaccessormethod.cpp javaremoveaccessormethod.cpp javaaddaccessormethod.cpp \
-				javacodegenerationpolicypage.cpp \
+				javacodegenerationpolicy.cpp javacodegenerationpolicypage.cpp \
+				javacodegenerationformbase.ui \
 				cppcodegenerator.cpp cppcodedocumentation.cpp cppcodeclassfield.cpp \
 				cppcodecomment.cpp cppmakecodedocument.cpp \
 				cppsourcecodedocument.cpp cppsourceclassdeclarationblock.cpp\
@@ -21,9 +20,12 @@ libcodegenerator_la_SOURCES = codegenfactory.cpp classifierinfo.cpp \
 				cppheadercodedocument.cpp cppheaderclassdeclarationblock.cpp \
 				cppheadercodeoperation.cpp cppheadercodeaccessormethod.cpp \
 				cppheadercodeclassfielddeclarationblock.cpp \
+				cppcodegenerationpolicy.cpp cppcodegenerationpolicypage.cpp \
+				cppcodegenerationformbase.ui \
 				xmlschemacodegenerator.cpp xmlschemaclassifiercodedocument.cpp \
-				xmlschemacodeclassfield.cpp
-
+				xmlschemacodeclassfield.cpp \
+				simplecodegenerator.cpp \
+				perlwriter.cpp
 install-data-local:
 	$(mkinstalldirs) $(DESTDIR)$(kde_datadir)/umbrello/codegenerators/
 	$(INSTALL_DATA) libcodegenerator.la $(DESTDIR)$(kde_datadir)/umbrello/codegenerators/libcodegenerator.la
