didn't compile for me
svn path=/trunk/kdesdk/umbrello/; revision=248524

--- a/umbrello/codegenerators/Makefile.am
+++ b/umbrello/codegenerators/Makefile.am
@@ -1,6 +1,6 @@
 lib_LTLIBRARIES = libcodegenerator.la
 
-INCLUDES = $(all_includes)
+INCLUDES = -I../dialogs $(all_includes)
 
 libcodegenerator_la_LDFLAGS = $(all_libraries)
 libcodegenerator_la_METASOURCES = AUTO
@@ -27,6 +27,8 @@ libcodegenerator_la_SOURCES = codegenfactory.cpp classifierinfo.cpp \
 				simplecodegenerator.cpp \
 				adawriter.cpp aswriter.cpp jswriter.cpp idlwriter.cpp perlwriter.cpp \
 				phpwriter.cpp pythonwriter.cpp sqlwriter.cpp
+libcodegenerator_la_COMPILE_FIRST = ../dialogs/codegenerationpolicybase.h
+
 install-data-local:
 	$(mkinstalldirs) $(DESTDIR)$(kde_datadir)/umbrello/codegenerators/
 	$(INSTALL_DATA) libcodegenerator.la $(DESTDIR)$(kde_datadir)/umbrello/codegenerators/libcodegenerator.la
